tests/expectations/compiler/records/owner_wrong_ty.out
Error [ETYC0372020]: The field `owner` in a `record` must have type `address`.
    --> compiler-test:4:5
     |
   4 |     record Token {
     |     ^^^^^^^^^^^^^^
   5 |         owner: bool,
     |         ^^^^^^^^^^^^
   6 |     }
     |     ^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
